Fix: sign out is done only in client
